# graphify-sf

./: CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: how-it-works.md
graphify/: __main__.py  analyze.py  detect.py  extract.py  llm.py  serve.py  skill.md  validate.py  watch.py
graphify/salesforce/: __init__.py  __main__.py  apex_enhanced.py  cli.py  constants.py  cpq.py  cpq_data.py  flow.py  flow_cpq_loops.py  governor_limits.py  lwc.py  mdt_mapping.py  metadata.py  neo4j_sf.py  objects.py  order_of_execution.py  permission_analysis.py  pipeline.py  profiles.py  query.py  release_sync.py  validate_sf.py  validation_cpq.py  viz.py
tests/: test_analyze.py  test_detect.py  test_extract.py  test_llm_backends.py  test_salesforce.py  test_skillgen.py  test_wheel_packaging.py
tests/fixtures/: sf_Account.object-meta.xml  sf_Account.sharingRules-meta.xml  sf_AccountFlow.flow-meta.xml  sf_AccountService.cls  sf_AccountTrigger.trigger  sf_Admin.profile-meta.xml  sf_AppConfig__c.object-meta.xml  sf_CustomLabels.labels-meta.xml  sf_MyComponent.js  sf_OppToQuoteMapping.Default.md-meta.xml  sf_QCPPlugin.cls
tests/fixtures/sf_cpq_data/: cpq_rules.json
tests/fixtures/sf_full_org_sample/force-app/main/default/classes/: OpportunityService.cls  OpportunityTrigger.trigger  QuoteCalculator.cls
tests/fixtures/sf_full_org_sample/force-app/main/default/flows/: AccountFlow.flow-meta.xml  NotifyOwnerFlow.flow-meta.xml  OpportunityFlow.flow-meta.xml
tests/fixtures/sf_full_org_sample/force-app/main/default/lwc/accountList/: accountList.html  accountList.js
tests/fixtures/sf_full_org_sample/force-app/main/default/objects/: Opportunity.object-meta.xml
tests/fixtures/sf_full_org_sample/force-app/main/default/profiles/: Admin.profile-meta.xml
tools/skillgen/: gen.py
